fixed header alignment and worked on styling main area and CTA boxes

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-
+	
 }
 p {
 	font-family: "Lora", serif;
@@ -46,8 +46,8 @@ h6 { font-family: "Oswald", sans-serif;
 
 /* Header */
 header {
-	position: top;
 	width: 100%;
+	position:fixed; left:0px; top:0px; height:30px; width:100%;
 
 }
 
@@ -55,10 +55,9 @@ header {
 	font-family: "Lora";
 	font-weight: bold;
 	font-size: 15px;
-	padding: 10px 15px 15px 7px;
+	padding: 10px 15px 15px 0px;
 	text-align: center;
-	position: absolute;
-	background-color: black;
+	background-color: #2C3539;
 	line-height: 25px;
 	width: 100%;
 }
@@ -86,11 +85,13 @@ header {
 	width: 100%;
 	margin: 0 auto;
 	padding-top: none;
+	text-align: center;
 }
 
 .container main h3 {
 	padding: 20px;
 	font-size: 40px;
+	text-align: center;
 }
 
 .container h2 {
@@ -110,18 +111,18 @@ header {
 
 .feature {
 	background: url("http://i.imgur.com/nrLHe9h.jpg") no-repeat scroll center center / cover;
-	padding: 50px;
-	width:100%;
+	width: 100%;
 	text-align: center;
 	min-height: 250px;
+	border-bottom: 5px solid orange;
 }
 
 .feature h2 {
 	font-size: 4em;
 	text-align: center;
-	padding: 70px 0px 10px 0px;
+	padding: 90px 0px 10px 0px;
 	color: white;
-	text-shadow: 1px 1px 30px black;
+	text-shadow: 1px 1px 30px #2C3539;
 
 }
 
@@ -140,8 +141,9 @@ header {
 
 .feature button { 
 	padding: 20px;
+	margin-bottom: 30px;
 	width: 300px;
-	background-color: black;
+	background-color: #2C3539;
 	color: white;
 	font-size: 1em;
 	transition: background 1s ease-in .25s;
@@ -163,6 +165,8 @@ main {
 	float: left;
 	width: 60%;
 	margin-left: 5%;
+	border-bottom: #0971B2 solid 40px;
+	border-top: #0971B2 solid 40px;
 }
 
 aside {
@@ -172,17 +176,21 @@ aside {
 }
 
 aside img {
-	color: white;
-	float: right;
 	display: block;
+	margin-bottom: 10px;
+	margin-top: 8px;
+	margin-left: auto;
+    margin-right: auto;
+    box-shadow: 5px 5px orange;
 }
 
 aside ul {
 	list-style-type: none;
 }
 
-aside img {
-	border-radius: 20px;
+aside img:hover {
+	opacity: .8;
+	box-shadow: 20px 0px #0971B2;
 }
 
 
@@ -192,24 +200,56 @@ aside img {
 }
 
 .box {
-	background: #fff;
-	color: #333;
-	width: 20%;
-	height: 300px;
-	margin-right: 30px;
+	background: #2C3539;
+	color: #fff;
+	width: 12%;
+	height: 200px;
+	margin: 40px 5px 100px 5px;
 	padding: 50px;
-	float: right;
-	transition: background 1s linear 2s;
-	border-top-right-radius: 20px;
-	background-border-bottom-left-radius: 20px;
+	display: inline-block;
+	transition: opacity .25s linear .5s;
+	border-radius: 20px 20px 0px 0px;
+	border-bottom: 10px solid #0971B2;
+}
+
+.box h3 {
+	font-size: 24px;
+	text-align: center;
+	margin-top: 25px;
+}
+
+.box p {
+	font-size: 18px;
+	text-align: center;
+	margin-bottom: 25px;
+	margin-top: 25px;
 }
 
 .box:hover {
-	background: #d3d3d3;
+	opacity: .8;
+	background-color: #0971B2;
 }
 
 .box:last-child {
 	margin-right: 0;
+}
+
+.box button {
+	font-family: "Oswald";
+	font-size: 16px;
+	padding: 20px;
+	width: 100%;
+	margin-bottom: 30px;
+	background-color: #ccc;
+	color: #2C3539;
+	font-size: 1em;
+	border-radius: 5px;
+	text-shadow: 30px;
+}
+
+.box button:hover {
+	background-color: orange;
+	color: white;
 }
 
 /* Footer */
